<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:layout_alignTop="@+id/relativeLayout"
            android:layout_alignParentRight="true"
            android:src="@drawable/sectorderecho"
            android:layout_alignBottom="@+id/relativeLayout"
            android:scaleType="fitXY"
            android:layout_toRightOf="@+id/relativeLayout"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/fondo"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relativeLayout"
            android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/basedown"
        android:scaleType="fitXY"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="30dp" />

    <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="406dp"
            android:layout_height="150dp"
            android:background="@drawable/header"
            android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp">

    </RelativeLayout>

    <TextView
            android:id="@+id/text_user_thank_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="left|bottom"
            android:text="@string/thank_you"
            android:textColor="#FFCC00"
            android:textSize="28dp"
            android:layout_marginTop="55dp"
            android:layout_alignTop="@+id/imageView3"
            android:layout_alignLeft="@+id/imageView3"
            android:layout_marginLeft="50dp"/>

    <TextView
            android:id="@+id/text_choose_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.97"
            android:paddingLeft="20dp"
            android:text="@string/rotate_your_pint"
            android:textColor="#FFFFFF"
            android:textSize="38sp"
            android:layout_marginTop="16dp"
            android:layout_alignTop="@+id/imageView"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:id="@+id/text_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="left|bottom"
            android:textColor="#FFCC00"
            android:textSize="28dp"
        android:text="Alfonso!"
        android:layout_alignTop="@+id/text_user_thank_you"
        android:layout_toRightOf="@+id/text_user_thank_you"
        android:layout_marginLeft="10dp" />

    <ImageView
            android:contentDescription="@string/inclinar_vaso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:src="@drawable/vaso_vacio"
            android:id="@+id/vaso"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/imageView"
        android:layout_below="@+id/text_choose_measure"
        android:layout_margin="10dp" />

</RelativeLayout>